# square-tools

./: .gitignore  DEMO.md  IMAGE_PROCESSING.md  QUICKSTART_BG_REMOVAL.md  README.md  SECURITY.md  WARP.md  config.sh  config.template.sh  update_item_price.py
cache-system/: bg_removal_service.py  demo_change_tracking.sh  square_cache_manager.py  test_bg_removal.py
catalog-toolkit/: README.md  requirements.txt
catalog-toolkit/docs/: api-call-compliance-matrix.md  graphql-readonly-assessment.md  major-skills-update-plan.md
catalog-toolkit/scripts/: catalog_cleanup_audit.py  compliance_check.py  curl_examples.sh  merge_food_categories.py  run_webhook_monitor.py  webhook_bootstrap.py
catalog-toolkit/square_catalog_toolkit/: __init__.py  auth.py  catalog_ops.py  compliance.py  constants.py  rest_client.py  sdk_client.py  webhook_monitor.py
docs/: TOOL_SURFACE_MATRIX.md
mcp-server/: MCP_RATIONALE.md  README.md  SESSION_SUMMARY.md  TROUBLESHOOTING.md  VERIFIED.md  WARP_SETUP.md  pyproject.toml  square_cache_mcp.py
runtime/: capability_matrix.json  operation_policy.json  runtime_profile.schema.json  runtime_profiles.json
